kavita/80-svc-kavita.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
spec:
  selector:
    app: kavita
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
