kavita/53-httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kavita-internal
  namespace: kavita
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - kavita.internal.white.fm
  rules:
    - backendRefs:
        - name: kavita
          port: 80
